Fixing Broken UI
Fix CSS to allow proper aligning of elements

--- a/assets/css/planetScreen.css
+++ b/assets/css/planetScreen.css
@@ -5,9 +5,9 @@ font-weight:400;
 font-style:normal;
 letter-spacing:1px;
 text-align:center;
-position:absolute;
-left:20%;
-width:60%;
+position:fixed;
+left:24%;
+/* width:60%; */
 height:100%;
 margin:10px;
 }
